# cosboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install-user.sh  justfile  reload-applet.sh  uninstall-user.sh
.claude/skills/api-design/: SKILL.md
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-11-30-cosboard-skeleton/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-11-30-cosboard-skeleton/planning/: initialization.md  requirements.md
agent-os/specs/2025-11-30-cosboard-skeleton/verifications/: final-verification.html
agent-os/specs/2025-12-01-basic-key-input/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-01-basic-key-input/implementation/: 8-test-review-gap-analysis-implementation.md
agent-os/specs/2025-12-01-basic-key-input/planning/: raw-idea.md  requirements.md
agent-os/specs/2025-12-01-basic-key-input/verifications/: final-verification.html
agent-os/specs/2025-12-01-json-layout-parser/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-01-json-layout-parser/planning/: raw-idea.md  requirements.md
agent-os/specs/2025-12-01-layout-renderer/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2025-12-01-layout-renderer/planning/: raw-idea.md  requirements.md
agent-os/specs/2025-12-01-layout-renderer/verifications/: final-verification.html
agent-os/standards/: README.md  STANDARDS_SUMMARY.md
agent-os/standards/api/: async.md  design.md  models.md  state-management.md
agent-os/standards/app/: accessibility.md  components.md  lifecycle.md  theming.md
agent-os/standards/global/: coding-style.md  commenting.md  conventions.md  error-handling.md  performance.md  tech-stack.md  validation.md
agent-os/standards/safety/: memory.md  verification.md
agent-os/standards/testing/: test-writing.md
i18n/en/: cosboard.ftl
resources/: io.github.cosboard.Cosboard.Applet.desktop  io.github.cosboard.Cosboard.desktop  io.github.cosboard.Cosboard.metainfo.xml  io.github.cosboard.Cosboard.service
resources/layouts/: README.md  example_qwerty.json  example_qwerty_base.json  example_qwerty_with_numpad.json
src/: app.rs  app_settings.rs  config.rs  layer_shell.rs  lib.rs  main.rs  state.rs
src/applet/: mod.rs
src/dbus/: mod.rs
src/input/: keycode.rs  mod.rs  modifier.rs  virtual_keyboard.rs
src/layout/: inheritance.rs  mod.rs  parser.rs  types.rs  validation.rs
src/renderer/: key.rs  message.rs  mod.rs  panel.rs  panel_ref.rs  popup.rs  row.rs  sizing.rs  state.rs  theme.rs  toast.rs  widget_placeholder.rs
