[package]
name = "cosboard"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A soft keyboard for COSMIC desktop"
repository = "https://github.com/cosboard/cosboard"

# Library crate for shared code
[lib]
name = "cosboard"
path = "src/lib.rs"

# Applet binary for the system tray
[[bin]]
name = "cosboard-applet"
path = "src/bin/applet.rs"

[dependencies]
futures = "0.3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Support creating additional application windows
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # System tray applet support (uses tiny_skia software rendering - faster for small applets)
    "applet",
]

[dev-dependencies]
tempfile = "3.8"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
